# smartbody

./: .gitignore  3rd party licenses.txt  CMakeLists.txt  README.md  SmartBodyPythonAPI.html  compile-sbm.bat  conanfile.py  conanfile.txt  linuxlibsbuild.sh  linuxlibsdownload.sh  osxdependencies.sh  osxlibsbuild.sh  osxlibsdownload.sh  smartbody.iss
core/: CMakeLists.txt
core/FestivalRelay/: speechrelay.bat
core/FestivalRelay/src/: FestivalRelay.cpp
core/MsSpeechRelay/: AssemblyInfo.cs  Readme.txt
core/SBKinectViewer/: DrawDevice.cpp  SkeletalViewer.cpp  SkeletalViewer.h  stdafx.h
core/TtsRelay/: CerevoiceRelay.cs  TtsRelay.cs  TtsRelay.csproj
core/TtsRelay/CerevoiceDll/: CerevoiceDLL.cpp  cerevoice_tts.cpp
core/TtsRelay/FestivalDll/: FestivalDLL.cpp  FestivalDLL.h
core/TtsRelay/RvoiceDll/: RvoiceDLL.cpp
core/TtsRelay/gui/: Program.cs
core/bonebus/include/: bonebus.h
core/bonebus/samples/minimal/: server.cpp
core/cepstralrelay/: README-AdditionalNotes.txt
core/cepstralrelay/src/: cepstral_tts.cpp  cepstralrelay.cpp
core/cerevoicerelay/: README-AdditionalNotes.txt  README.txt
core/cerevoicerelay/include/: cerevoice_tts.h
core/cerevoicerelay/src/: CerevoiceRelay.cpp  cerevoice_tts.cpp
core/irrlichtsmartbody/src/: irrlichtsmartbodylistener.cpp  main.cpp
core/javascript/protobuf/patch/: common.cpp  platform_macros.h
core/kinecttracker/GL/: glut.h
core/kinecttracker/src/: SceneDrawer.cpp  main.cpp
core/ogre-viewer/: CMakeLists.txt  README.txt
core/ogre-viewer/src/: ExampleApplication.h  ExampleFrameListener.h  OgreFrameListener.cpp  OgreFrameListener.h  OgreRenderer.cpp  OgreRenderer.h  SBListener.cpp  SBListener.h  config.ini  main.cpp
core/ogredemo/: CMakeLists.txt
core/ogredemo/src/: BasicCharacter.cpp  BasicCharacter.h  OgreDemo.cpp  OgreDemo.h  OgreSmartBody.cpp  OgreSmartBody.h  OgreSmartBodyListener.cpp  ParserCOLLADAFast.cpp  SBAssetHandlerCOLLADA.cpp  SBAssetHandlerCOLLADA.h
core/ogresmartbody/src/: ogresmartbody.cpp  ogresmartbody.h  ogresmartbody.py  ogresmartbodylistener.cpp  ogresmartbodylistener.h
core/sbmonitor/: rundesigner.bat
core/sbmonitor/gui/: BmlCreatorDialog.cpp  CommandDialog.cpp  ConnectDialog.cpp  EntityCreatorDialog.cpp  FaceDialog.cpp  FaceDialog.h  GLGraphWidget.cpp  QtCrtDbgOn.h  SbmDebuggerForm.cpp  UtilsDialog.h  glwidget.cpp  glwidget.h  gui.pro  moc.bat  moc_BMLCreatorDialog.cpp  moc_CommandDialog.cpp  moc_FaceDialog.cpp  moc_ResourceDialog.cpp  moc_SbmDebuggerForm.cpp  moc_SettingsDialog.cpp  moc_glwidget.cpp  sbmonitor.vcxproj.filters  ui_DataViewerDialog.h
core/sbmonitor/gui/designer/: CommandDialog.ui  ConnectDialog.ui  ResourceDialog.ui  SettingsDialog.ui
core/sbmonitor/lib/: NetRequest.h  SBDebuggerClient.cpp  SBDebuggerClient.h  SBDebuggerCommon.h
core/smartbody/: CMakeLists.txt
core/smartbody/SmartBody/: CMakeLists.txt
core/smartbody/SmartBody-audio/: CMakeLists.txt
core/smartbody/SmartBody-bindings-javascript/: CMakeLists.txt
core/smartbody/SmartBody-bindings-javascript/src/: SBJavascript.cpp  SBJavascriptAnimation.cpp  SBJavascriptAttribute.cpp  SBJavascriptCharacter.cpp  SBJavascriptClass.h  SBJavascriptMath.cpp  (+4 more)
core/smartbody/SmartBody-bindings-python/: CMakeLists.txt
core/smartbody/SmartBody-bml/: CMakeLists.txt
core/smartbody/SmartBody-bml-bindings-python/: CMakeLists.txt
core/smartbody/SmartBody-bonebus/: CMakeLists.txt
core/smartbody/SmartBody-commands/: CMakeLists.txt
core/smartbody/SmartBody-control/: CMakeLists.txt
core/smartbody/SmartBody-debugger/: CMakeLists.txt
core/smartbody/SmartBody-export/: CMakeLists.txt
core/smartbody/SmartBody-navmesh/: CMakeLists.txt
core/smartbody/SmartBody-navmesh-bindings-python/: CMakeLists.txt
core/smartbody/SmartBody-physics-ode/: CMakeLists.txt
core/smartbody/SmartBody-renderer-gl/: CMakeLists.txt
core/smartbody/SmartBody-renderer-gl-bindings-python/: CMakeLists.txt
core/smartbody/SmartBody-serialize/: CMakeLists.txt
core/smartbody/SmartBody-speech-remote/: CMakeLists.txt
core/smartbody/SmartBody-steering-steerlib/: CMakeLists.txt
core/smartbody/SmartBody-steering-steerlib-bml/: CMakeLists.txt
core/smartbody/SmartBody-vhmsg/: CMakeLists.txt
core/smartbody/SmartBodyJS/: Shader.cpp  esUtil.cpp  minimalwrapper.cpp
core/smartbody/Smartbody-dll/: CMakeLists.txt
core/smartbody/math/: CMakeLists.txt
core/smartbody/sbgui/: CMakeLists.txt
core/smartbody/simplesmartbody/: CMakeLists.txt  simplesmartbody.cpp
core/smartbody/smartbodyOpenVR/: CGLRenderModel.cpp  CGLRenderModel.h  CMainApplication.cpp  CMainApplication.h  CMakeLists.txt  SBOpenVRListener.cpp  SBOpenVRListener.h  SmartBodyOpenVR.cpp
core/smartbody/sr/: CMakeLists.txt
core/smartbody/steersuite-1.3/: CMakeLists.txt
core/smartbody/util/: CMakeLists.txt
core/vhcl/: CMakeLists.txt
core/vhcl/include/: vhcl_memory.h  vhcl_platform.h
core/vhcl/src/: vhcl_audio.cpp  vhcl_crash.cpp  vhcl_math.cpp
core/vhmsg/: build_all_docs.bat
core/vhmsg/vhmsg-c/: CMakeLists.txt
core/vhmsg/vhmsg-java/: build.xml
core/vhmsg/vhmsg-lisp/: test.lisp
lib/bonebus/: CMakeLists.txt
lib/bonebus/include/: bonebus-c.h
lib/bonebus/src/: bonebus-c.cpp  bonebus.cpp
lib/vhcl/: CMakeLists.txt  vhcl.vcxproj.filters
lib/vhcl/include/: vhcl.h  vhcl_assert.h  vhcl_audio.h  vhcl_crash.h  vhcl_log.h  vhcl_math.h  vhcl_platform.h  vhcl_public.h  vhcl_socket.h  vhcl_string.h  vhcl_timer.h  vhcl_types.h
lib/vhcl/src/: vhcl_audio.cpp  vhcl_crash.cpp  vhcl_log.cpp  vhcl_memory.cpp  vhcl_socket.cpp  vhcl_string.cpp
lib/vhcl/test/: CMakeLists.txt  log.props  test.cpp  testempty.cpp
libs/FestivalRelay/: CMakeLists.txt  speechrelay.sh
libs/kinecttracker/: CMakeLists.txt
libs/kinecttracker/Data/: modules.xml
libs/kinecttracker/Res/: AssemblyInfo-OpenNI.cs
libs/ogredemo/: CMakeLists.txt
libs/ogredemo/src/: OgreDemo.cpp  OgreDemo.h  OgreSmartBody.cpp  OgreSmartBodyListener.h  ParserCOLLADAFast.h
libs/vhcl/: CMakeLists.txt
libs/vhcl/include/: Pow2Assert.h  vhcl_audio.h  vhcl_win32.h
libs/vhcl/src/: vhcl_log.cpp  vhcl_timer.cpp
(+3562 files in other folders)
