#Needed for loading media assets
add_definitions(-DSMARTBODY_DATADIR="${CMAKE_INSTALL_FULL_DATADIR}")
#Needed for dynamically loading SteerLib modules
add_definitions(-DSMARTBODY_LIBDIR="${CMAKE_INSTALL_FULL_LIBDIR}")

if (${GOOGLE_PROFILER})
    add_definitions(-DUSE_GOOGLE_PROFILER)
endif ()

add_subdirectory(util)
add_subdirectory(math)
add_subdirectory(sr)
add_subdirectory(SmartBody)
add_subdirectory(SmartBody-vhmsg)
add_subdirectory(SmartBody-bonebus)
add_subdirectory(SmartBody-audio)
add_subdirectory(SmartBody-physics-ode)
add_subdirectory(SmartBody-renderer-gl)
add_subdirectory(SmartBody-renderer-gl-bindings-python)
add_subdirectory(SmartBody-control)
add_subdirectory(SmartBody-navmesh)
add_subdirectory(SmartBody-navmesh-bindings-python)
add_subdirectory(SmartBody-bindings-python)
add_subdirectory(SmartBody-bindings-javascript)
add_subdirectory(SmartBody-bml)
add_subdirectory(SmartBody-bml-bindings-python)
add_subdirectory(SmartBody-serialize)
#add_subdirectory(Smartbody-dll)
add_subdirectory(SmartBody-debugger)
add_subdirectory(simplesmartbody)
add_subdirectory(sbgui)

